Initial implementaion for plus button: added list-container and list-item-add directives. Renamed master-footer directive into list-footer. Cleanups and deletions of obsolete files.

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -3,7 +3,7 @@
     <span class="link-navigation-back" ng-bind="leftNavigationText"></span>
   </a>
 
-  <a href class="group-symmetrical--middle" ng-click="addItemFn()">
+  <a href class="group-symmetrical--middle" ng-click="addItem()">
     <span>+</span>
   </a>
 
