--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -5,7 +5,7 @@
       <div ng-repeat="archivedList in archivedLists" ng-bind="archivedList.title"></div>
     </div>
   </section>
-  <footer class="container-content--after" master-footer="getFeatureMap('lists')"
-  master-footer-add-item="addList({})"></footer>
+  <footer class="container-content--after" list-footer="getFeatureMap('lists')"
+  list-footer-add-item="addList({})"></footer>
 </div>
 
