--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -17,7 +17,7 @@
             <input type="checkbox" ng-click="toggleCompleteTask(task)" icon-checkbox="editorTitlebarCheckbox" />
           </div>
           <div class="group-mixed--middle">
-            <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" editor-titlebar-text-input msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
+            <textarea type="text" ng-model="titlebar.text" ng-keydown="titlebarTextKeyDown($event)" auto-focus="registerTitleBarInputFocusCallback(fn)" auto-focus-blur="registerTitleBarInputBlurCallback(fn)" msd-elastic dynamic-placeholder="{{getTitlebarTextInputPlaceholder()}}" maxlength="128" required ></textarea>
           </div>
           <div ng-if="titlebarHasText()" class="group-mixed--right">
             <button type="button" class="btn-clear" ng-click="clearTitlebarText()"></button>
