--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -19,12 +19,8 @@
       <li>
         <div class="lists-heading-container">
           <a href class="lists-link" ng-class="getFeatureClass('lists')" ng-click="gotoFeature('lists')">lists</a>
-          <a href ng-class="getFeatureClass('lists')" class="hide-expand-link" ng-click="toggleLists()">
-            <span ng-if="lists.length && isListsVisible()">-</span>
-            <span ng-if="lists.length && !isListsVisible()">+</span>
-          </a>
         </div>
-        <ul ng-if="isListsVisible() && lists.length > 0">
+        <ul ng-if="lists.length > 0">
           <li class="list" ng-repeat="list in lists" ng-class="$last && 'list-last'">
             <a href class="list-link" ng-class="getListClass(list)" ng-click="gotoFeature('list', list)">{{getListTitleText(list)}}</a>
           </li>
