--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -2,7 +2,10 @@
   <section class="container-content">
     <div class="group-instruction-jumbotron row">
       <p class="group-instruction--header"><span class="text-logo"></span></p>
-      <p class="group-instruction--main"><span class="text-active">extend</span><br/>your<br/>biological<br/>mind</p>
+      <p class="group-instruction--main">
+        change<br/>the way<br/>you<br/>
+        <span class="text-active">think</span>
+        </p>
     </div>
   </section>
   <footer class="container-content--after">
