--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -57,9 +57,11 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
           <div class="container-content" list>
             <h1>{{daySlides[2].info}}</h1>
-            <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
-              {{task.title}}
-            </div>
+            <div class="row animate-list-item-leave"
+            ng-repeat="task in rightDuplicateTasks = (tasks | tasksByDate:daySlides[2].info)
+            | limitTo: currentListLimitTo"
+            list-item="task" list-item-action="openTaskEditor(task)" list-item-left-action="toggleCompleteTask(task, checkboxCheckingReadyDeferred)" list-item-left-action-type="checkbox"
+            list-item-left-action-checked="task.completed" list-item-length="rightDuplicateTasks.length"></div>
             <div list-item-add></div>
           </div>
         </div>
@@ -67,9 +69,11 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" list>
             <h1>{{daySlides[0].info}}</h1>
-            <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
-              {{task.title}}
-            </div>
+            <div class="row animate-list-item-leave"
+            ng-repeat="task in leftTasks = (tasks | tasksByDate:daySlides[0].info)
+            | limitTo: currentListLimitTo"
+            list-item="task" list-item-action="openTaskEditor(task)" list-item-left-action="toggleCompleteTask(task, checkboxCheckingReadyDeferred)" list-item-left-action-type="checkbox"
+            list-item-left-action-checked="task.completed" list-item-length="leftTasks.length"></div>
             <div list-item-add></div>
           </div>
         </div>
@@ -77,9 +81,11 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" list>
             <h1>{{daySlides[1].info}}</h1>
-            <div ng-repeat="task in tasks | tasksByDate:daySlides[1].info" list-item="task" list-item-has-checkbox="true">
-              {{task.title}}
-            </div>
+            <div class="row animate-list-item-leave"
+            ng-repeat="task in middleTasks = (tasks | tasksByDate:daySlides[1].info)
+            | limitTo: currentListLimitTo"
+            list-item="task" list-item-action="openTaskEditor(task)" list-item-left-action="toggleCompleteTask(task, checkboxCheckingReadyDeferred)" list-item-left-action-type="checkbox"
+            list-item-left-action-checked="task.completed" list-item-length="middleTasks.length"></div>
             <div list-item-add></div>
           </div>
         </div>
@@ -87,9 +93,11 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" list>
             <h1>{{daySlides[2].info}}</h1>
-            <div ng-repeat="task in tasks | tasksByDate:daySlides[2].info" list-item="task" list-item-has-checkbox="true">
-              {{task.title}}
-            </div>
+            <div class="row animate-list-item-leave"
+            ng-repeat="task in rightTasks = (tasks | tasksByDate:daySlides[2].info)
+            | limitTo: currentListLimitTo"
+            list-item="task" list-item-action="openTaskEditor(task)" list-item-left-action="toggleCompleteTask(task, checkboxCheckingReadyDeferred)" list-item-left-action-type="checkbox"
+            list-item-left-action-checked="task.completed" list-item-length="rightTasks.length"></div>
             <div list-item-add></div>
           </div>
         </div>
@@ -97,9 +105,9 @@
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" list>
             <h1>{{daySlides[0].info}}</h1>
-            <div ng-repeat="task in tasks | tasksByDate:daySlides[0].info" list-item="task" list-item-has-checkbox="true">
-              {{task.title}}
-            </div>
+            <div class="row animate-list-item-leave"
+            ng-repeat="task in leftDuplicateTasks = (tasks | tasksByDate:daySlides[0].info)
+            | limitTo: currentListLimitTo" list-item="task" list-item-action="openTaskEditor(task)" list-item-left-action="toggleCompleteTask(task, checkboxCheckingReadyDeferred)" list-item-left-action-type="checkbox" list-item-left-action-checked="task.completed" list-item-length="leftDuplicateTasks.length"></div>
             <div list-item-add></div>
           </div>
         </div>
