--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -56,7 +56,7 @@
             <div ng-hide="snoozeOpen">
 
               <div ng-if="!calendarOpen" class="row animate-calendar" ng-click="openCalendar()" ng-bind="task.transientProperties.date ? (task.transientProperties.date | date:'EEE MMM d y' | lowercase) : 'select date'"></div>
-              <div ng-if="calendarOpen" class="swiper-no-swiping row animate-calendar" data-snap-ignore="true" calendar="getCalendarStartingDate(task)" calendar-return-date="closeCalendarAndCall(setTaskDate, task, date)" calendar-set-default-date="true" calendar-bound="false">
+              <div ng-if="calendarOpen" class="swiper-no-swiping row animate-calendar" data-snap-ignore="true" calendar="getCalendarStartingDate(task)" calendar-return-date="closeCalendarAndCall(setTaskDate, task, date)" calendar-set-default-date="true" calendar-bound="false" editable-field-container="auto" editable-field-container-click-elsewhere="closeCalendar()">
                 <button ng-if="task.transientProperties.date" type="button" class="btn-clear pikaday-clear" ng-click="closeCalendarAndCall(clearTransientDate, task)"></button>
               </div>
 
