--- a/frontend/core/src/main/webapp/static/app/base/listItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/base/listItemAdd.html
@@ -1,14 +1,14 @@
-<form role="form" class="group-mixed swiper-no-swiping" ng-submit="callAndRefresh(addSubtask, subtask)"
+<form role="form" class="group-mixed swiper-no-swiping" ng-submit="addItem()"
 add-item data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container="disable">
-
   <div class="group-mixed--left">
-    <input ng-if="leftActionType === 'checkbox'" type="checkbox" ng-checked="leftActionChecked"
-    swiper-click="toggleLeftCheckbox(item)" ng-class="leftActionClass" icon-checkbox>
+    <input ng-if="leftCheckboxFn" type="checkbox" ng-checked="leftCheckboxChecked" icon-checkbox>
   </div>
   <div class="group-mixed--middle">
-    <textarea id="listItemAddTextarea" ng-model="subtask.title" ng-blur="textareaBlurred()"
-    editable-field placeholder="add task..." maxlength="128" auto-focus="registerAddItemFocusCallback(fn)"
-    auto-focus-blur="registerAddItemBlurCallback(fn)"></textarea>
+    <textarea ng-model="newItem.title" msd-elastic ng-blur="textareaBlurred()"
+    ng-keydown="textareaKeyDown($event)"
+    editable-field placeholder="add {{newItemType}}..." maxlength="128"
+    auto-focus="registerAddItemFocusCallback(fn)" auto-focus-blur="registerAddItemBlurCallback(fn)">
+    </textarea>
   </div>
   <div class="group-mixed--right">
     <a href>right</a>
