Implemented editor open from arrow when adding item. Typo fixes.

--- a/frontend/core/src/main/webapp/static/app/base/listItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/base/listItemAdd.html
@@ -11,6 +11,6 @@ editable-field-container-clicked-elsewhere="clickedElsewhere()">
     </textarea>
   </div>
   <div class="group-mixed--right">
-    <a href>right</a>
+    <a href editable-field-deactivate ng-click="clickArrow()">&gt;</a>
   </div>
 </form>
