--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -43,6 +43,7 @@
   <script src="static/common/dynamicPlaceholderDirective.js"></script>
   <script src="static/common/editableFieldBackdropDirective.js"></script>
   <script src="static/common/editableFieldContainerDirective.js"></script>
+  <script src="static/common/editableFieldDeactivateDirective.js"></script>
   <script src="static/common/editableFieldDirective.js"></script>
   <script src="static/common/iconCheckboxDirective.js"></script>
   <script src="static/common/includeReplaceDirective.js"></script>
