--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,8 +1,32 @@
 <div class="container-fluid--inner" list-container drawer-handle="left">
   <section class="container-content" list>
     <h2 ng-bind="items.length + ' items'"></h2>
-    <div list-item-add></div>
-    <div ng-repeat="item in items">{{item.title}}</div>
+
+    <div list-item-add="{}" list-item-add-save="saveItem(newItem)">
+      <form role="form" class="group-mixed" ng-submit="saveItem(newItem)"
+      data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
+      editable-field-container-clicked-elsewhere="clickedElsewhere()">
+        <div class="group-mixed--middle">
+          <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
+          editable-field placeholder="add item..." maxlength="128"
+          auto-focus="registerAddItemCallbacks(focus, blur)">
+          </textarea>
+        </div>
+        <div class="group-mixed--right">
+          <a href editable-field-deactivate ng-click="openEditor('item', newItem)">&gt;</a>
+        </div>
+      </form>
+    </div>
+
+    <div class="row animate-list-item-leave"
+    ng-repeat="item in items | limitTo: currentListLimitTo | orderBy:'modified':true"
+    list-item="items.length">
+      <div class="group-mixed">
+        <a href class="group-mixed--middle" swiper-click="openEditor('item', newItem)">
+          <span class="text-link" ng-bind="item.title"></span>
+        </a>
+      </div>
+    </div>
   </section>
   <footer class="container-content--after" list-footer="getFeatureMap('inbox')"></footer>
 </div>
